feat: Implement Garage Brand Specialization logic (frontend)

--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -923,7 +923,7 @@
                         </p>
                     </div>
                     <div class="card-body">
-                        <form id="supplierSettingsForm">
+                        <form id="supplierSettingsForm" onsubmit="saveSupplierSettings(event)">
                             <!-- Supplier Type Selector -->
                             <div style="margin-bottom: 32px;">
                                 <label
