fix: Garage dashboard specialization bugs - missing all_brands param, duplicate IDs, and initialization logic

--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -103,7 +103,7 @@
                         </label>
                     </div>
 
-                    <div id="brandSelectionContainer" style="display: none;">
+                    <div id="regBrandSelectionContainer" style="display: none;">
                         <label style="font-size: 13px; margin-bottom: 8px; display: block;">Select brands you specialize
                             in:</label>
                         <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px; font-size: 12px;">
@@ -129,6 +129,12 @@
                                     class="brand-checkbox" value="Chevrolet"> Chevrolet</label>
                             <label style="display: flex; align-items: center; gap: 4px;"><input type="checkbox"
                                     class="brand-checkbox" value="Ford"> Ford</label>
+                            <label style="display: flex; align-items: center; gap: 4px;"><input type="checkbox"
+                                    class="brand-checkbox" value="Audi"> Audi</label>
+                            <label style="display: flex; align-items: center; gap: 4px;"><input type="checkbox"
+                                    class="brand-checkbox" value="Mazda"> Mazda</label>
+                            <label style="display: flex; align-items: center; gap: 4px;"><input type="checkbox"
+                                    class="brand-checkbox" value="Volkswagen"> Volkswagen</label>
                             <label style="display: flex; align-items: center; gap: 4px;"><input type="checkbox"
                                     class="brand-checkbox" value="Land Rover"> Land Rover</label>
                         </div>
