--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -86,7 +86,17 @@
                     </a>
                 </div>
 
-
+                <div class="nav-section">
+                    <div class="nav-section-title">Disputes</div>
+                    <a class="nav-item" data-section="orderDisputes">
+                        <i class="bi bi-exclamation-triangle"></i> Order Disputes
+                        <span class="nav-badge" id="orderDisputeBadge" style="display: none;">0</span>
+                    </a>
+                    <a class="nav-item" data-section="paymentDisputes">
+                        <i class="bi bi-currency-dollar"></i> Payment Disputes
+                        <span class="nav-badge" id="paymentDisputeBadge" style="display: none;">0</span>
+                    </a>
+                </div>
 
                 <div class="nav-section">
                     <div class="nav-section-title">Moderation</div>
@@ -284,7 +294,101 @@
                 </div>
             </section>
 
+            <!-- In Progress Tickets Section -->
+            <section class="section" id="sectionInProgress">
+                <div class="page-header">
+                    <h1 class="page-title"><i class="bi bi-hourglass-split"></i> In Progress Tickets</h1>
+                </div>
+                <div class="content-card">
+                    <table class="data-table">
+                        <thead>
+                            <tr>
+                                <th>Subject</th>
+                                <th>Customer</th>
+                                <th>Order</th>
+                                <th>Updated</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="inProgressTicketList">
+                            <tr><td colspan="5" class="empty-state">Loading...</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
 
+            <!-- Resolved Tickets Section -->
+            <section class="section" id="sectionResolved">
+                <div class="page-header">
+                    <h1 class="page-title"><i class="bi bi-check-circle"></i> Resolved Tickets</h1>
+                </div>
+                <div class="content-card">
+                    <table class="data-table">
+                        <thead>
+                            <tr>
+                                <th>Subject</th>
+                                <th>Customer</th>
+                                <th>Order</th>
+                                <th>Resolved</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="resolvedTicketList">
+                            <tr><td colspan="5" class="empty-state">Loading...</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
+            <!-- Order Disputes Section -->
+            <section class="section" id="sectionOrderDisputes">
+                <div class="page-header">
+                    <h1 class="page-title"><i class="bi bi-exclamation-triangle" style="color: #f59e0b;"></i> Order Disputes</h1>
+                    <p style="color: var(--text-secondary);">Customer complaints about orders</p>
+                </div>
+                <div class="content-card">
+                    <table class="data-table">
+                        <thead>
+                            <tr>
+                                <th>Order</th>
+                                <th>Customer</th>
+                                <th>Part</th>
+                                <th>Reason</th>
+                                <th>Date</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="orderDisputesTable">
+                            <tr><td colspan="6" class="empty-state">Loading...</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
+            <!-- Payment Disputes Section -->
+            <section class="section" id="sectionPaymentDisputes">
+                <div class="page-header">
+                    <h1 class="page-title"><i class="bi bi-currency-dollar" style="color: #ef4444;"></i> Payment Disputes</h1>
+                    <p style="color: var(--text-secondary);">Garage payout issues</p>
+                </div>
+                <div class="content-card">
+                    <table class="data-table">
+                        <thead>
+                            <tr>
+                                <th>Garage</th>
+                                <th>Order</th>
+                                <th>Amount</th>
+                                <th>Reason</th>
+                                <th>Date</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="paymentDisputesTable">
+                            <tr><td colspan="6" class="empty-state">Loading...</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
 
             <!-- Reviews Moderation Section -->
             <section class="section" id="sectionReviews">
