--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -33,11 +33,11 @@
             </div>
             <form id="loginForm" autocomplete="off">
                 <div class="form-group">
-                    <label>Email / Phone</label>
+                    <label for="loginEmail">Email / Phone</label>
                     <input type="text" class="form-control" id="loginEmail" placeholder="Enter credentials" required>
                 </div>
                 <div class="form-group">
-                    <label>Password</label>
+                    <label for="loginPassword">Password</label>
                     <input type="password" class="form-control" id="loginPassword" placeholder="••••••••" required>
                 </div>
                 <button type="submit" class="btn-login">
@@ -311,7 +311,9 @@
                             </tr>
                         </thead>
                         <tbody id="inProgressTicketList">
-                            <tr><td colspan="5" class="empty-state">Loading...</td></tr>
+                            <tr>
+                                <td colspan="5" class="empty-state">Loading...</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -334,7 +336,9 @@
                             </tr>
                         </thead>
                         <tbody id="resolvedTicketList">
-                            <tr><td colspan="5" class="empty-state">Loading...</td></tr>
+                            <tr>
+                                <td colspan="5" class="empty-state">Loading...</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -343,7 +347,8 @@
             <!-- Order Disputes Section -->
             <section class="section" id="sectionOrderDisputes">
                 <div class="page-header">
-                    <h1 class="page-title"><i class="bi bi-exclamation-triangle" style="color: #f59e0b;"></i> Order Disputes</h1>
+                    <h1 class="page-title"><i class="bi bi-exclamation-triangle" style="color: #f59e0b;"></i> Order
+                        Disputes</h1>
                     <p style="color: var(--text-secondary);">Customer complaints about orders</p>
                 </div>
                 <div class="content-card">
@@ -359,7 +364,9 @@
                             </tr>
                         </thead>
                         <tbody id="orderDisputesTable">
-                            <tr><td colspan="6" class="empty-state">Loading...</td></tr>
+                            <tr>
+                                <td colspan="6" class="empty-state">Loading...</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -368,7 +375,8 @@
             <!-- Payment Disputes Section -->
             <section class="section" id="sectionPaymentDisputes">
                 <div class="page-header">
-                    <h1 class="page-title"><i class="bi bi-currency-dollar" style="color: #ef4444;"></i> Payment Disputes</h1>
+                    <h1 class="page-title"><i class="bi bi-currency-dollar" style="color: #ef4444;"></i> Payment
+                        Disputes</h1>
                     <p style="color: var(--text-secondary);">Garage payout issues</p>
                 </div>
                 <div class="content-card">
@@ -384,7 +392,9 @@
                             </tr>
                         </thead>
                         <tbody id="paymentDisputesTable">
-                            <tr><td colspan="6" class="empty-state">Loading...</td></tr>
+                            <tr>
+                                <td colspan="6" class="empty-state">Loading...</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
