Feature: Frontend fixes for Finance Dashboard
- Use dedicated /finance/refunds endpoint instead of transactions
- Added status badge column to refunds table
- Added confirmation dialog for bulk payout processing
- Improved error handling in loadRefunds

--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -419,7 +419,8 @@
                                 <th>Customer</th>
                                 <th>Amount</th>
                                 <th>Reason</th>
-                                <th>Created By</th>
+                                <th>Status</th>
+                                <th>Processed By</th>
                                 <th>Date</th>
                             </tr>
                         </thead>
