feat(admin): add WebSocket real-time updates for pending counts
- Add Socket.IO connection to admin-dashboard.html
- Add real-time event listeners for new_garage_registration, new_plan_request
- Add emitToAdmin helper function in socketIO.ts
- Add join_admin_room socket event handler
- Emit new_garage_registration when garages register in auth.service.ts
- Add pulse animation CSS for badge updates
- Auto-scroll to top when switching sections
- Show Live/Offline connection status in header

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -994,6 +994,8 @@
         </div>
     </div>
 
+    <!-- Socket.IO for real-time updates -->
+    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
     <script>
         const script = document.createElement('script');
         script.src = `js/admin-dashboard.js?v=${Date.now()}`;
