fix(finance): add 'confirmed' resolution for payout disputes
CRITICAL BUG FIX:
- Previous logic cancelled payouts for any resolution except corrected/resent
- Added 'confirmed' option for when garage actually received payment
- 'confirmed' now properly marks payout as confirmed (not cancelled)

Frontend: Added 'Confirmed - Garage received payment' dropdown option
Backend: resolveDispute() now handles 4 resolution types properly

Also manually fixed payout for QS-2601-0050 in production

--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -619,9 +619,10 @@
                     <label>Resolution Type *</label>
                     <select id="rdResolutionType" class="form-control" required onchange="toggleAmountCorrection()">
                         <option value="">Select resolution...</option>
-                        <option value="corrected">✅ Corrected - Resend with fix</option>
+                        <option value="confirmed">✅ Confirmed - Garage received payment (dispute invalid)</option>
+                        <option value="corrected">🔧 Corrected - Resend with fix</option>
                         <option value="resent">🔄 Resent - Payment resent</option>
-                        <option value="cancelled">❌ Cancelled - Cancel payout</option>
+                        <option value="cancelled">❌ Cancelled - Cancel payout (order cancelled)</option>
                     </select>
                 </div>
 
