fix(admin): rename accounting to finance in staff roles
Changed for consistency with Finance Dashboard:
- staff role filter: accounting → finance
- STAFF_ROLE_ICONS: accounting → finance

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -389,7 +389,7 @@
                         <select id="staffRoleFilter" onchange="loadStaff()">
                             <option value="all">All Roles</option>
                             <option value="operations">🎯 Operations</option>
-                            <option value="accounting">💰 Accounting</option>
+                            <option value="finance">💰 Finance</option>
                             <option value="customer_service">🎧 Customer Service</option>
                             <option value="quality_control">✅ Quality Control</option>
                             <option value="logistics">🚚 Logistics</option>
