--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -914,7 +914,7 @@
                                     <select id="newStaffRole" required>
                                         <option value="">Select Role...</option>
                                         <option value="operations">🎯 Operations</option>
-                                        <option value="accounting">💰 Accounting</option>
+                                        <option value="finance">💰 Finance</option>
                                         <option value="customer_service">🎧 Customer Service</option>
                                         <option value="quality_control">✅ Quality Control</option>
                                         <option value="logistics">🚚 Logistics</option>
