--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -13,7 +13,8 @@
     <script src="/lib/leaflet/leaflet.js"></script>
     <!-- Shared CSS (must come before module CSS) -->
     <link rel="stylesheet" href="css/shared.css">
-    <link rel="stylesheet" href="css/operations-dashboard.css?v=2.1">
+    <link id="opsCss" rel="stylesheet" href="">
+    <script>document.getElementById('opsCss').href = 'css/operations-dashboard.css?v=' + Date.now();</script>
     <script>
         // Critical UI Interaction - Inlined for robustness
         window.toggleSidebar = function () {
