revert: restore original static CSS versions to fix FOUC
Reverted dynamic Date.now() CSS loading which caused Flash of Unstyled Content

--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -9,8 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/bootstrap-icons/bootstrap-icons.css">
     <link rel="stylesheet" href="css/shared.css">
-    <link id="dashCss" rel="stylesheet" href="">
-    <script>document.getElementById('dashCss').href = 'css/operations-dashboard.css?v=' + Date.now();</script>
+    <link rel="stylesheet" href="css/operations-dashboard.css?v=2.1">
     <script>
         window.toggleSidebar = function () {
             const sidebar = document.querySelector('.sidebar');
@@ -682,7 +681,7 @@
     <script src="js/shared/toast.js?v=20260115d"></script>
     <script src="js/shared/modal.js?v=20260115d"></script>
     <script src="js/pagination-utils.js?v=20260115d"></script>
-    <script src="js/finance-dashboard.js?v=20260123b"></script>
+    <script src="js/finance-dashboard.js?v=20260123a"></script>
 </body>
 
 </html>
