--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -7,8 +7,7 @@
     <title>QScrap Admin - Platform Management</title>
     <link rel="stylesheet" href="css/design-tokens.css">
     <link rel="stylesheet" href="css/shared.css">
-    <link id="adminCss" rel="stylesheet" href="">
-    <script>document.getElementById('adminCss').href = 'css/admin-dashboard.css?v=' + Date.now();</script>
+    <link rel="stylesheet" href="css/admin-dashboard.css?v=2.1">
     <link rel="stylesheet" href="assets/bootstrap-icons/bootstrap-icons.css">
     <script>
         // Critical UI Interaction - Inlined for robustness
