--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -11,7 +11,7 @@
     <script src="/js/chart.min.js"></script>
     <!-- Shared CSS (must come before module CSS) -->
     <link rel="stylesheet" href="css/shared.css">
-    <link rel="stylesheet" href="css/garage-dashboard.css?v=20260110b">
+    <link rel="stylesheet" href="css/garage-dashboard.css?v=2.3">
     <!-- Leaflet CSS for GPS Location Picker (Free, No Billing) -->
     <link rel="stylesheet" href="/lib/leaflet/leaflet.css" />
     <script>
