feat: Add Stripe webhook for self-healing payment confirmation

--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -1224,6 +1224,7 @@
                         <div><strong>Vehicle:</strong> <span id="orderModalVehicle"></span></div>
                         <div><strong>Price:</strong> <span id="orderModalPrice"
                                 style="color: var(--success); font-weight: 600;"></span></div>
+                        <div style="grid-column: 1/-1;"><strong>Category:</strong> <span id="orderModalCategory"></span></div>
                         <div style="grid-column: 1/-1;"><strong>Part:</strong> <span id="orderModalPart"></span></div>
                         <div><strong>Condition:</strong> <span id="orderModalCondition"></span></div>
                         <div><strong>Warranty:</strong> <span id="orderModalWarranty"></span></div>
