COMPLIANCE: Remove batch payment processing (Process All)
BUSINESS DECISION: Removed for financial controls & regulatory compliance

ACCOUNTING ISSUES WITH BATCH PROCESSING:
- Same reference number for multiple payments (reconciliation impossible)
- Same notes for all transactions (audit trail violation)
- No individual verification (fraud risk)
- Violates Qatar Ministry of Commerce documentation requirements

ENFORCED CONTROLS:
✅ Each payout requires unique reference number
✅ Each payout requires individual notes
✅ Proper audit trail per transaction
✅ Bank reconciliation compliance
✅ Full oversight on every payment

REMOVED:
- 'Process All' button from Pending Payouts
- Batch selection checkboxes
- Bulk processing functions (kept with logging for reference)

Finance team must now:
1. Process each payout individually
2. Enter unique bank reference per transaction
3. Add specific notes per garage/order
4. Verify each payment before sending

This ensures full regulatory compliance and proper financial controls.

--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -243,10 +243,9 @@
             <section class="section" id="sectionPending">
                 <div class="page-header">
                     <h1 class="page-title"><i class="bi bi-clock-history"></i> Pending Payouts</h1>
-                    <div style="display: flex; gap: 10px;">
-                        <button class="btn btn-success" onclick="processBulkPayouts()">
-                            <i class="bi bi-send-check"></i> Process All
-                        </button>
+                    <div style="color: var(--text-secondary); font-size: 14px;">
+                        <i class="bi bi-info-circle"></i> Each payment requires individual reference and notes for
+                        compliance
                     </div>
                 </div>
 
@@ -254,8 +253,6 @@
                     <table class="data-table">
                         <thead>
                             <tr>
-                                <th><input type="checkbox" id="selectAllPending" onclick="toggleSelectAll('pending')">
-                                </th>
                                 <th>Garage</th>
                                 <th>Order #</th>
                                 <th>Part Amount</th>
@@ -267,7 +264,7 @@
                         </thead>
                         <tbody id="pendingPayoutsTable">
                             <tr>
-                                <td colspan="8" class="empty-state">Loading...</td>
+                                <td colspan="7" class="empty-state">Loading...</td>
                             </tr>
                         </tbody>
                     </table>
