feat: Loyalty Discount Dashboard Transparency - backend stats for discounts today/week/month, orders show 🎁 badge with discount amount, new Loyalty Program Impact card on Operations Dashboard

--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -263,6 +263,34 @@
                     </div>
                 </div>
 
+                <!-- Loyalty Program Impact Card (Financial Transparency) -->
+                <div class="content-card" style="margin-bottom: 20px; background: linear-gradient(135deg, #fef3c7, #fde68a); border: 1px solid #f59e0b;">
+                    <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 16px;">
+                        <div style="width: 40px; height: 40px; border-radius: 10px; background: #f59e0b; display: flex; align-items: center; justify-content: center;">
+                            <i class="bi bi-gift" style="color: white; font-size: 20px;"></i>
+                        </div>
+                        <div>
+                            <h3 style="margin: 0; color: #92400e; font-size: 16px;">Loyalty Program Impact</h3>
+                            <p style="margin: 0; color: #b45309; font-size: 12px;">Discounts given to loyal customers</p>
+                        </div>
+                    </div>
+                    <div class="stats-grid" style="gap: 12px;">
+                        <div style="background: white; border-radius: 12px; padding: 16px; text-align: center; border: 1px solid #fcd34d;">
+                            <div style="color: #92400e; font-size: 11px; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">Today</div>
+                            <div id="statLoyaltyToday" style="font-size: 20px; font-weight: 700; color: #d97706;">0 QAR</div>
+                            <div id="statLoyaltyCount" style="font-size: 11px; color: #b45309;">0 orders</div>
+                        </div>
+                        <div style="background: white; border-radius: 12px; padding: 16px; text-align: center; border: 1px solid #fcd34d;">
+                            <div style="color: #92400e; font-size: 11px; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">This Week</div>
+                            <div id="statLoyaltyWeek" style="font-size: 20px; font-weight: 700; color: #d97706;">0 QAR</div>
+                        </div>
+                        <div style="background: white; border-radius: 12px; padding: 16px; text-align: center; border: 1px solid #fcd34d;">
+                            <div style="color: #92400e; font-size: 11px; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">This Month</div>
+                            <div id="statLoyaltyMonth" style="font-size: 20px; font-weight: 700; color: #d97706;">0 QAR</div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Recent Activity -->
                 <div class="content-card">
                     <div class="content-header">
