feat: add loyalty program impact card to finance dashboard

--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -187,6 +187,57 @@
                     </div>
                 </div>
 
+                <!-- Loyalty Program Impact Card (Financial Transparency) -->
+                <div class="content-card"
+                    style="margin-top: 20px; background: linear-gradient(135deg, #fef3c7, #fde68a); border: 1px solid #f59e0b;">
+                    <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 16px;">
+                        <div
+                            style="width: 40px; height: 40px; border-radius: 10px; background: #f59e0b; display: flex; align-items: center; justify-content: center;">
+                            <i class="bi bi-gift" style="color: white; font-size: 20px;"></i>
+                        </div>
+                        <div>
+                            <h3 style="margin: 0; color: #92400e; font-size: 16px;">Loyalty Program Impact</h3>
+                            <p style="margin: 0; color: #b45309; font-size: 12px;">Discounts given to loyal customers
+                                (platform absorbs cost)</p>
+                        </div>
+                    </div>
+                    <div class="stats-grid" style="gap: 12px; grid-template-columns: repeat(4, 1fr);">
+                        <div
+                            style="background: white; border-radius: 12px; padding: 16px; text-align: center; border: 1px solid #fcd34d;">
+                            <div
+                                style="color: #92400e; font-size: 11px; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">
+                                Today</div>
+                            <div id="statLoyaltyToday" style="font-size: 20px; font-weight: 700; color: #d97706;">0 QAR
+                            </div>
+                            <div id="statLoyaltyCount" style="font-size: 11px; color: #b45309;">0 orders</div>
+                        </div>
+                        <div
+                            style="background: white; border-radius: 12px; padding: 16px; text-align: center; border: 1px solid #fcd34d;">
+                            <div
+                                style="color: #92400e; font-size: 11px; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">
+                                This Week</div>
+                            <div id="statLoyaltyWeek" style="font-size: 20px; font-weight: 700; color: #d97706;">0 QAR
+                            </div>
+                        </div>
+                        <div
+                            style="background: white; border-radius: 12px; padding: 16px; text-align: center; border: 1px solid #fcd34d;">
+                            <div
+                                style="color: #92400e; font-size: 11px; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">
+                                This Month</div>
+                            <div id="statLoyaltyMonth" style="font-size: 20px; font-weight: 700; color: #d97706;">0 QAR
+                            </div>
+                        </div>
+                        <div
+                            style="background: white; border-radius: 12px; padding: 16px; text-align: center; border: 1px solid #fcd34d;">
+                            <div
+                                style="color: #92400e; font-size: 11px; text-transform: uppercase; font-weight: 600; margin-bottom: 4px;">
+                                Impact</div>
+                            <div style="font-size: 12px; color: #b45309;">Garages receive full price</div>
+                            <div style="font-size: 11px; color: #92400e;">Platform absorbs discount</div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Quick Actions -->
                 <div class="content-card" style="margin-top: 24px;">
                     <h3 style="margin-bottom: 20px;"><i class="bi bi-lightning-charge"></i> Quick Actions</h3>
@@ -678,7 +729,7 @@
     <script src="js/shared/toast.js?v=20260115d"></script>
     <script src="js/shared/modal.js?v=20260115d"></script>
     <script src="js/pagination-utils.js?v=20260115d"></script>
-    <script src="js/finance-dashboard.js?v=20260123c"></script>
+    <script src="js/finance-dashboard.js?v=20260126a"></script>
 </body>
 
 </html>
