feat: add Order column to Recent Activity table in support dashboard

--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -212,6 +212,7 @@
                             <tr>
                                 <th>Type</th>
                                 <th>Subject</th>
+                                <th>Order</th>
                                 <th>Customer</th>
                                 <th>Status</th>
                                 <th>Time</th>
@@ -219,7 +220,7 @@
                         </thead>
                         <tbody id="recentActivityTable">
                             <tr>
-                                <td colspan="5" class="empty-state">Loading...</td>
+                                <td colspan="6" class="empty-state">Loading...</td>
                             </tr>
                         </tbody>
                     </table>
@@ -458,7 +459,7 @@
     <script src="js/shared/toast.js?v=20260115c"></script>
     <script src="js/shared/modal.js?v=20260115c"></script>
     <script src="js/pagination-utils.js?v=20260115c"></script>
-    <script src="js/support-dashboard.js?v=20260126b"></script>
+    <script src="js/support-dashboard.js?v=20260126c"></script>
 </body>
 
 </html>
